 - Potion-filled Fluid Blob applies its effect to entities while in flight
- Improved quick firing breech opening effects
 - Add more particles on opening and give them a bit of velocity
 - Add a short pickup delay for ejected items, can be configured on server
 - Can configure between item going directly into inventory and dropping item, default latter
Fixed:
- Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
- Fixed cannon loader pushing without head
- Fixed lag from cannon being tested during explosion, courtesy of Endalion
- Fixed Disable All Failures config option not disabling squibbing
- Fixed manual autocannons breaking on tick after squib
- Fixed Create Big Cannons projectiles exceeding 10 m/gt (200 m/gt) losing their velocity when loaded
- Fixed Smoke Shell and Drop Mortar Shell being invalid blocks for createbigcannons:fuzed_block block entity
- Fixed Cannon Carriage rotation info tooltip and syncing
- Fixed Disable All Failures applying to big cannon projectiles with 0 cannon power
- Fixed schematics not saving data of many blocks by adding #create:safe_nbt
- Fixed potential crash on cannon failure in some Create Big Cannons contraption code
- Fixed /gamerule doTileDrops false not applying to Create Big Cannons pole contraptions
- Fixed small charge projectiles not emitting cannon smoke

===

0.5.4

"Now, occasionally you're going to get stuck. It's nothing to get upset about. Don't go hurling your controller at the cat, because it might throw something back, and it'll only escalate, and then, well..."
- Stephen Fry, LittleBigPlanet (2008)

Create Big Cannons 0.5.4, with more QoL features and minor fixes.
Now supports Create Fabric 0.5.1.f patch 1.

Added:
- Added ability for some base Create contraptions to load cannons*
 - Mechanical Piston, Gantry, and Rope Pulley
- Added Cannon Loader breaking features similar to Mechanical Piston
- Added block hardness compatibility with Create's Copycat blocks