@@ -51,7 +51,8 @@ public record ClientboundCBCExplodePacket(double x, double y, double z, float po
 
 	public enum ExplosionType {
 		SHRAPNEL,
-		FLAK
+		FLAK,
+		SMOKE
 	}
 
 }
